Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8129

Compilation warnings in log0crypt.cc

Details

    Description

      10.1/storage/xtradb/log/log0crypt.cc: In function 'Crypt_result log_blocks_crypt(const unsigned char*, ulint, unsigned char*, bool)':
      10.1/storage/xtradb/log/log0crypt.cc:188:3: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
      10.1/storage/xtradb/log/log0crypt.cc: In function 'void log_crypt_write_checkpoint_buf(unsigned char*)':
      10.1/storage/xtradb/log/log0crypt.cc:445:9: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
       
      10.1/storage/innobase/log/log0crypt.cc: In function 'Crypt_result log_blocks_crypt(const unsigned char*, ulint, unsigned char*, bool)':
      10.1/storage/innobase/log/log0crypt.cc:188:3: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.