MDEV-8129: Compilation warnings in log0crypt.cc

Fix incorrect types and compiler warnings.